[tool.poetry]
name = "nukebatchrender"
version = "0.15.15"
description = "Nuke 批渲染"
authors = ["NateScarlet <NateScarlet@Gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
pyside2 = "5.12.3"
sqlalchemy = "^1"
psutil = "^5"
win-unicode-console = {version = "0.5", markers = "sys_platform == 'win32'"}
pendulum = "2.0.4"
python-dateutil = "^2"
pytzdata = "*"

[tool.poetry.dev-dependencies]
pylint = "^2"
"autopep8" = "^1"
pyinstaller = "~3.5"
pytest = "^4"
pywin32-ctypes = {version = "*", markers = "sys_platform == 'win32'"} # Pyinstaller require this
rope = "0.14.0"
pefile = "^2019.4.18"

[[tool.poetry.source]]
# Required for use mirror, see https://github.com/python-poetry/poetry/issues/1632
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

